<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.stepstone.stepper.StepperLayout
        android:id="@+id/stepperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:ms_backButtonColor="@android:color/white"
        app:ms_backButtonText="@string/action_back"
        app:ms_completeButtonColor="@android:color/white"
        app:ms_completeButtonText="@string/action_create"
        app:ms_nextButtonColor="@android:color/white"
        app:ms_nextButtonText="@string/action_next"
        app:ms_tabStepDividerWidth="50dp" />

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#ffffff"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

</RelativeLayout>