<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewWelcome"
            style="@style/Primary.Text.Style.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical_spacing_default"
            android:layout_marginLeft="@dimen/margin_extra_large"
            android:layout_marginRight="@dimen/margin_extra_large"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/msg_welcome"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/textViewChoicheOptionBellow" />

        <TextView
            android:id="@+id/textViewChoicheOptionBellow"
            style="@style/Primary.Text.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:layout_marginLeft="@dimen/margin_extra_large"
            android:layout_marginRight="@dimen/margin_extra_large"
            android:gravity="center"
            android:text="@string/msg_choiche_bellow_options"
            app:layout_constraintBottom_toTopOf="@+id/buttonIamClient" />

        <Button
            android:id="@+id/buttonIamClient"
            style="@style/Primary.Button.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_extra_large"
            android:layout_marginRight="@dimen/margin_extra_large"
            android:text="@string/action_i_am_client"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMsgWhenEntering"
            style="@style/Secondary.Text.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_extra_large"
            android:layout_marginRight="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_vertical_spacing_default"
            android:gravity="center"
            android:text="@string/msg_when_entering_you_allow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonIamClient" />

        <Button
            android:id="@+id/buttonIamNotClient"
            style="@style/Primary.Text.Style.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:text="@string/action_i_am_not_client"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMsgWhenEntering" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/tarja" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>