<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBg"
    android:orientation="vertical"
    tools:context=".editPassword.view.EditPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_new_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:nextFocusDown="@+id/passwordConfirmationEditText"
                    android:nextFocusForward="@+id/passwordConfirmationEditText"
                    android:nextFocusRight="@+id/passwordConfirmationEditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_confirm_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordConfirmationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:nextFocusDown="@+id/sendButton"
                    android:nextFocusForward="@+id/sendButton"
                    android:nextFocusRight="@+id/sendButton" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_selector_secondary"
                android:text="@string/text_send"
                android:textColor="@color/lightText" />
        </LinearLayout>

        <include
            android:id="@+id/loadingView"
            layout="@layout/view_loading" />
    </FrameLayout>
</LinearLayout>